--- a/MyNewsWeb/packages.config
+++ b/MyNewsWeb/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngularJS.Core" version="1.6.5" targetFramework="net452" />
+  <package id="angular-smart-table" version="2.1.8" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
